--- a/README
+++ b/README
@@ -13,20 +13,22 @@ If test fail it repeats the test.
 It is a quick piece of code to the job so it is not very well written so don't be too critical of it, however improvements/feedback to edmundwatson@gmail.com 
 
 
-
 FILES
 he.php - The main run. Edit with your details.
 getips.php - this script update the ips.csv from 
+setting.php - contains the default settings
+commands.php - has a a set of commands
 ips.php - list the IPs in ip.csv 
 ipshtml.php - list the IPs in ip.csv in html
 
 GENERATED FILE
+setting.json - stored the settings 
 ip.csv - a list of ips from http://sixy.ch/feed encoded in base 64
 number.txt - keeps a reference of how far though ip.csv
-my_cookies.txt - keeps a cookie for loging in.
+my_cookies.txt - keeps a cookie for logging in.
 %test%.html - the returned document for debugging
 %test%raw.html - the submission to he for debugging
-fail.html - the failed returned page of the last failured for a unknown reason.
+fail.html - the failed returned page of the last failure for a unknown reason.
 
 
 
@@ -39,21 +41,16 @@ It also runs on Slug OS 5.3 but some of the command maybe been to be recompiled 
 
 place where you want it.
 
-
 edit the setting.php file with your username, password and directory where you want the working files to go.
 
+# php he.php
 
-#php he.php
-
-again and it will perform all the tests
-
- 
 and/or add cron task like this
 
 # crontab -e
 and add
 * 1 * * * /php /%WHERE YOU PUT IT%/he.php >>/var/log/he 2>>/var/log/he
-This will repeat it daily. You may want to increase the frequecy if you find it doesn't pass 24 hour on he system.
+    This will repeat it daily. You may want to increase the frequency if you find it doesn't pass 24 hour on he system.
 Outputs to /var/log/he, you may want to turn off debug in he.php if you have a small system, the /var/log/he file doesn't fill up.
 
 
